--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "electron-store": "^6.0.1"
   },
   "devDependencies": {
+    "electron": "^28.2.0",
+    "electron-builder": "^24.9.1"
   },
   "build": {
     "asar": false,
@@ -25,12 +27,13 @@
     "files": [
       "electron/**/*",
       "web-ui/**/*",
+      "efflux_desktop",
       "package.json"
     ],
     "extraResources": [
       {
-        "from": "efflux_desktop.exe",
-        "to": "efflux_desktop.exe"
+        "from": "efflux_desktop",
+        "to": "efflux_desktop"
       },
       {
         "from": "web-ui/node_modules",
